--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,8 @@
+body{
+    font-family: 'Times New Roman', Times, serif;
+}
+
+
 /* Inicia Header */
 .navfixed{
 position: fixed;
@@ -78,12 +83,82 @@ cursor: pointer;
     opacity: 1;
     visibility: visible;
 }
+/* inicia sobre mi 2 diseño mobile */
+
+.cris{
+    width:400px ;
+    height: auto;
+    margin-left: 44px;
+    margin-top: 40px;
+}
+.crisp{
+    width:400px ;
+    height: auto;
+    margin-left: 44px;nter;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+/* sobre mi fin diseño mobile  */
+
+/* inicia sobre mi  */
+
+@media screen and (min-width:768px){
+
+    .contenedormi{
+        display: flex;
+        margin-top: 5rem;
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        grid-template-rows: repeat(4,25vh);
+
+    }
+
+    #cris1{
+        width: 550px;
+        height: auto;
+    }
+    #pmi1{
+        margin: 25%;
+        text-align: center;
+        display: flex;
+        width: 450px;
+        height: auto;
+        /* termina sobre mi */
+        /* inicia statement */
+    }
+    .contenedorinte{
+        display: flex;
+        margin-top: 5rem;
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        grid-template-rows: repeat(4,25vh);
+
+    }
+    #cris2{
+        width: 550px;
+        height: auto;
+    }
+    #pmi2{
+        margin: 25%;
+        text-align: center;
+        display: flex;
+        width: 450px;
+        height: auto;
+        
+    }
+           /* termina statement */
+}
+
+
+
+
 
 
 /* terminana los estilos de las tarjetas de fotos */
 /* inicia sesión sobre mi */
 
-.contenedormi{
+/* .contenedormi{
     margin-top: 5rem;
     display: grid;
     grid-template-columns: repeat(4,1fr);
@@ -122,8 +197,8 @@ cursor: pointer;
     text-align: center;
     width: 100%;
     height: auto;
-    grid-column: 3/6;
-    grid-row: 1/3;
+    grid-column: 3/3;
+    grid-row: 1/1;
 }
 #pmi2{
     margin-top: auto;
@@ -131,6 +206,27 @@ cursor: pointer;
     text-align: center;
     width: 100%;
     height: auto;
-    grid-column: 1/3;
-    grid-row: 4/6;
+    grid-column: 1/1;
+    grid-row: 4/4;
 }
+@media screen and (min-width:992px){
+    #cris1{
+        margin-left: 30px;
+        position: absolute;
+        width: 287px;
+        height: auto;
+    }
+    #pmi1{
+        margin: 20px;
+        margin-left: 30px;
+        text-align: center;
+        width: 100%;
+        height: auto;
+        grid-column: 1/2;
+        grid-row: 2/2;
+    }
+    
+}
+@media screen {
+    
+} */
