--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -185,7 +185,7 @@ cursor: pointer;
   ul.slider li img{
     margin-top: 40px;
     width: 550;
-    height: 300px;
+    height: 920px;
     object-fit: cover;
   }
   
@@ -218,6 +218,69 @@ cursor: pointer;
     height: 10px;
     font-size: 20px;
     border-radius: 100%;
+  }
+  @media screen and (min-width:768px){
+    .foto{
+        /* grid-template-columns: repeat(4,1fr);
+        grid-template-rows: repeat(4,25vh); */
+    }
+    .jne{
+        width: 1350px;
+        height: 920px;
+
+    }
+    
+    .b3{
+
+        padding-left:400px;
+        }
+      #bo1{
+        position: absolute;
+        margin-top: 700px;
+        margin-left: 40px;
+        margin-left: 40px;
+        display: inline-block;
+        color: white;
+        text-decoration: none;
+        background-color: grey;
+        padding: 10px;
+        width: 10px;
+        height: 10px;
+        font-size: 20px;
+        border-radius: 100%;
+        opacity: 100%;
+      }
+      #bo2{
+        position: absolute;
+        margin-top: 680px;
+        margin-left: 200px;
+        display: inline-block;
+        color: white;
+        text-decoration: none;
+        background-color: grey;
+        padding: 10px;
+        width: 10px;
+        height: 10px;
+        font-size: 20px;
+        border-radius: 100%;
+        opacity: 100%;
+      }
+      #bo3{
+        position: absolute;
+        margin-top: 655px;
+        margin-left: 400px;
+        display: inline-block;
+        color: white;
+        text-decoration: none;
+        background-color: grey;
+        padding: 10px;
+        width: 10px;
+        height: 10px;
+        font-size: 20px;
+        border-radius: 100%;
+        opacity: 100%;
+      }
+ 
   }
 
   /* termina fotografía */
