--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,8 +61,8 @@ h4{
 }
 .fototarjeta{
     width: 100%;
-    height: 200px;
-    object-fit: contain;
+    height: 300px;
+    object-fit:scale-down;
 /*     transition: all 50ms ease-out; */
 
 }
@@ -176,9 +176,9 @@ cursor: pointer;
 /* para el cambio infinoto:  */
     animation: cambio 18s infinite;
 /* para que la rotación se alterne:  */
-    animation-direction: alternate;
+/*     animation-direction: alternate; */
 /* para que la animación inicie lento : */
-    animation-timing-function: ease-in;
+/*     animation-timing-function: ease-in; */
 
 }
 
