--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -204,3 +204,23 @@ cursor: pointer;
 
 
   /* termina fotografía */
+
+
+  /* inicia footer */
+  .titulocontanto{
+    margin-top: 10rem;
+    height: 10%;
+    font-size: 60px;
+    display: flex;
+    justify-content: center;
+    
+  }
+  .redes{
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+  }
+  .redes i{
+    padding: 100px 20px 80px 20px;
+  }
+  /* termina footer */
